Apr 26, 2014 - Version 0.2.11
=============================
* When yumex is compiled-in as installer, check the running UID and supply
proper command-line argument to yumes when UID=0.

Oct 16, 2013 - Version 0.2.10
=============================
* Update in libexecdir handling.

Sep 26, 2013 - Version 0.2.9
===========================
* Fixed typos preventing proper build on Debian and derivates.
* Updated autoconf to accept a non-standard libexec dir

Jun 22, 2013 - Version 0.2.8
============================
* Fixed zombie process when using graphical package updater like yumex.

Mar 25, 2013 - Version 0.2.7
============================
* Added autodetection of libnotify and libmatenotify plus an option to force
one of them at compile time.
* Fixed applet crash when mate-panel is killed (not that it should ever be!)

Mar 7, 2013 - Version 0.2.5
===========================
* Updated to automake
* Fixed applet background transparecny
* French translation by Patrick Monnerat <pm@datasphere.ch>

Jan 28, 2013 - Version 0.2.4
============================
* Updated for Fedora 18 (libmatepanelapplet-4).

Dec 2, 2012 - Version 0.2.3
===========================
* Updated the configure script to check for either libmatepanelapplet version
4 or 3. 

Jul 27, 2012 - Version 0.2.2
============================

* Added yumex as installer
* Replaced libnotify with libmatenotify
* Added --enable-backend option to configure: force a particular backend
* Added --enable-installer option to configure: force a particular installer

Jul 12, 2012 - Version 0.1.0
============================

* Added Package-Kit as a back-end and set it as most preferred one.
* Added spec file to build an RPM from the local source directory.

Jun 27, 2012 - Version 0.0.1
============================

* Initial release.
